[workspace]
members = ["backend", "frontend", "shared_data"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "postgres", "uuid"] }

[profile.production]
inherits = "release"
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = "s"
codegen-units = 1
