[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.120"
build-info = "0.0.39"
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "6ad300c59234bdd1301fb4c018a49568904d59be", features = ["nightly", "rustls", "islands"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "6ad300c59234bdd1301fb4c018a49568904d59be", features = ["nightly"] }
wasm-bindgen = "0.2.93"
http = "1.1.0"
const_format = "0.2.32"
uuid = { version = "1.10.0", features = ["serde"] }
web-sys = { version = "0.3.70", features = ["Clipboard", "Window", "Navigator", "Permissions", "HtmlFormElement", "FormData"] }
wasm-bindgen-futures = "0.4.43"
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "6ad300c59234bdd1301fb4c018a49568904d59be" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { version = "0.8.1", default-features = false, features = ["multipart", "query", "json", "tokio", "http1", "http2", "form"] }
axum-server = { version = "0.7.1", default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
shared_data = { path = "../shared_data", features = ["sqlx"] }
axum-sqlx-tx = "0.10.0"
sqlx = { workspace = true }
horrorshow = { version = "0.8.4", default-features = false, features = ["std", "ops"] }
rss = { version = "2.0.7", default-features = false }
sitewriter = { version = "1.0.4", default-features = false }
chrono = { version = "0.4.35", default-features = false }
tower-http = { version = "0.6.0", default-features = false, features = ["fs"] }
tower-no-ai = "0.2.0"
tower-sessions = "0.14.0"
tower-cache = { git = "https://github.com/itsjunetime/tower-cache.git", features = ["axum"] }
oxipng = { version = "9.0.0", default-features = false, features = ["parallel"] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", rev = "6ad300c59234bdd1301fb4c018a49568904d59be" }
argon2 = { version = "0.5.3", features = ["std"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_urlencoded = "0.7.1"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"

[features]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[build-dependencies]
build-info-build = "0.0.39"

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "production"
bin-profile-release = "production"

# leptos needs this for the `island` macro
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
