[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.120"
build-info = "0.0.42"
leptos = { version = "0.8.15", default-features = false, features = ["nightly", "rustls", "islands"] }
leptos_router = { version = "0.8.11", default-features = false, features = ["nightly"] }
wasm-bindgen = "0.2.93"
http = "1.1.0"
const_format = "0.2.32"
uuid = { version = "1.10.0", features = ["serde"] }
web-sys = { version = "0.3.70", features = ["DataTransfer", "FileList", "File", "FormData"] }
wasm-bindgen-futures = "0.4.43"
leptos_meta = { version = "0.8.5", default-features = false }
server_fn = { version = "0.8.0-beta", default-features = false, features = ["multipart"] }
js-sys = "0.3.77"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-console = "0.3.0"
shared_data = { path = "../shared_data" }
any_spawner = "0.3.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { version = "0.8", default-features = false, features = ["multipart", "query", "json", "tokio", "http1", "http2", "form", "macros", "tracing"] }
axum-extra = { version = "0.12", default-features = false }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls"] }
# axum-server = { path = "../../../foss/axum-server/", default-features = false, features = ["tls-rustls"] }
rustls = { version = "*", features = ["brotli", "zlib"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
axum-sqlx-tx = "0.10"
sqlx = { workspace = true }
horrorshow = { version = "0.8", default-features = false, features = ["std", "ops"] }
rss = { version = "2", default-features = false }
sitewriter = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["fs", "trace"] }
tower-no-ai = "0.2"
tower-sessions = "0.14"
# tower-cache = { git = "https://github.com/itsjunetime/tower-cache.git", features = ["axum"] }
oxipng = { version = "10", default-features = false, features = ["parallel"] }
leptos_axum = { version = "0.8", default-features = false }
argon2 = { version = "0.5", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_urlencoded = "0.7"
multer = "*"
itertools = "*"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "shared_data/sqlx"]
hydrate = ["leptos/hydrate", "uuid/js"]

[build-dependencies]
build-info-build = "0.0.42"

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "production"
bin-profile-release = "production"
# hash-files = true

# leptos needs this for the `island` macro
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
