[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json"] }
wasm-bindgen-futures = { version = "0.4.42", default-features = false }
wasm-bindgen = { version = "0.2.92", default-features = false, features = ["std"] }
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
yew-router = { version = "0.18.0", default-features = false }
shared_data = { path = "../shared_data" }
web-sys = { version = "0.3.69", default-features = false, features = ["Window", "DragEvent", "DataTransfer", "FileList", "HtmlDocument", "HtmlButtonElement", "Blob", "HtmlElement", "CssStyleDeclaration"] }
gloo-console = { version = "0.3.0", default-features = false }
js-sys = { version = "0.3.69", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
gloo-timers = "0.3.0"
uuid = { version = "=1.12.0", features = ["v4"] }
