[package]
name = "shared_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
serde = { version = "1.0.183", default-features = false,  features = ["serde_derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls"], optional = true }
syntect = { version = "5.1.0", default-features = false, features = ["default-themes", "parsing", "default-syntaxes", "html", "regex-fancy"] }

[features]
sqlx = ["dep:sqlx"]
