[package]
name = "shared_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", default-features = false, features = ["alloc"] }
pulldown-cmark = { version = "0.12.0", default-features = false, features = ["simd", "html"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
sqlx = { workspace = true, optional = true }
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "default-syntaxes", "html", "regex-fancy", "plist-load"] }

[features]
sqlx = ["dep:sqlx"]
